# proton-drive

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
crates/pdrive-core/: Cargo.toml
crates/pdrive-core/src/: auth.rs  config.rs  db.rs  drive.rs  lib.rs  sync.rs
crates/pdrive-core/tests/: config_test.rs
crates/pdrive-daemon/: Cargo.toml
crates/pdrive-daemon/src/: dbus.rs  main.rs
crates/pdrive-gui/: Cargo.toml  build.rs
crates/pdrive-gui/qml/: MainWindow.qml  main.qml
crates/pdrive-gui/src/: captcha_webview.py  cxxqt_object.rs  dbus_client.rs  main.rs
crates/pdrive-gui/ui/: login_dialog.slint  main.slint  main_window.slint
crates/proton-drive-sdk-stub/: Cargo.toml
crates/proton-drive-sdk-stub/src/: lib.rs
pkg/proton-drive/: .BUILDINFO  .MTREE  .PKGINFO
src/proton-drive-0.1.0/: Cargo.toml
src/proton-drive-0.1.0/crates/pdrive-gui/src/: tray.rs
src/proton-drive-0.1.0/crates/pdrive-gui/ui/: login_dialog.slint
src/proton-drive-0.1.0/docs/plans/: 2026-03-21-proton-drive-client.md
src/proton-drive-0.1.1/: PKGBUILD  pdrive.install
src/proton-drive-0.1.1/crates/pdrive-core/tests/: auth_test.rs  db_test.rs
src/proton-drive-0.1.1/crates/pdrive-daemon/src/: dbus.rs
src/proton-drive-0.1.1/crates/pdrive-gui/: Cargo.toml
src/proton-drive-0.1.1/crates/pdrive-gui/ui/: main.slint
src/proton-drive-0.1.2/crates/pdrive-core/tests/: drive_test.rs
src/proton-drive-0.1.2/crates/pdrive-gui/: Cargo.toml
src/proton-drive-0.1.2/crates/pdrive-gui/ui/: main_window.slint
src/proton-drive-0.1.3/: .SRCINFO  .gitignore
src/proton-drive-0.1.3/assets/: pdrive.desktop
src/proton-drive-0.1.3/crates/pdrive-core/tests/: config_test.rs  sync_test.rs
src/proton-drive-0.1.3/crates/pdrive-gui/src/: main.rs
src/proton-drive-0.1.3/crates/pdrive-gui/ui/: main_window.slint
src/proton-drive-0.1.3/crates/proton-drive-sdk-stub/src/: lib.rs
systemd/: pdrive.service
