[package]
name = "pdrive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
proton-drive-sdk = { path = "../proton-drive-sdk-stub" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
age = { version = "0.11", features = ["async"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
anyhow = "1"
tracing = "0.1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
