[package]
name = "pdrive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
proton-drive-sdk = { path = "../proton-drive-sdk-stub" }
tokio = { workspace = true }
serde = { workspace = true }
toml = "0.8"
age = { version = "0.11", features = ["async"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "5"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
