[package]
name = "pdrive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
proton-sdk-rs2 = { workspace = true }
proton-drive-sdk = { workspace = true }
semver = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "5"
keyring = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
