[package]
name = "pdrive-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdrive-daemon"
path = "src/main.rs"

[dependencies]
pdrive-core = { path = "../pdrive-core" }
tokio = { version = "1", features = ["full"] }
zbus = { version = "4", features = ["tokio"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
