[package]
name = "pdrive-daemon"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "pdrive-daemon"
path = "src/main.rs"

[dependencies]
pdrive-core = { path = "../pdrive-core" }
proton-sdk-rs2 = { workspace = true }
proton-drive-sdk = { workspace = true }
semver = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
