[package]
name = "pdrive-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdrive"
path = "src/main.rs"

[build-dependencies]
slint-build = "1"

[dependencies]
pdrive-core = { path = "../pdrive-core" }
slint = { workspace = true }
ksni = "0.2"
tokio = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
