[workspace]
members = [
    "crates/pdrive-core",
    "crates/pdrive-daemon",
    "crates/pdrive-gui",
    "crates/proton-drive-sdk-stub",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
slint = "1"
